unpackaged/main/default/objects/T1_Survey_Response__c/T1_Survey_Response__c.object-meta.xml
<CustomObject>
    <label>T1 Survey Response</label>
    <nameField>
        <label>T1 Survey Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T1 Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>