unpackaged/main/default/objects/T1_Survey_Response__c/fields/Answer_10__c.field-meta.xml
<CustomField>
    <fullName>Answer_10__c</fullName>
    <label>Answer 10</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>