unpackaged/main/default/objects/T1_Survey_Response__c/fields/Answer_11__c.field-meta.xml
<CustomField>
    <fullName>Answer_11__c</fullName>
    <label>Answer 11</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>