unpackaged/main/default/objects/T1_Survey_Response__c/fields/Answer_12__c.field-meta.xml
<CustomField>
    <fullName>Answer_12__c</fullName>
    <label>Answer 12</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>