unpackaged/main/default/objects/T1_Survey_Response__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>T1 Survey Responses</relationshipLabel>
    <relationshipName>T1_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>