unpackaged/main/default/objects/T1_Survey_Response__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>T1 Survey Responses</relationshipLabel>
    <relationshipName>T1_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>