unpackaged/main/default/objects/T1_Survey_Response__c/fields/NPS_Result__c.field-meta.xml
<CustomField>
    <fullName>NPS_Result__c</fullName>
    <formula>CASE(NPS_Score__c,
0,&quot;Detractor&quot;,
1,&quot;Detractor&quot;,  
2,&quot;Detractor&quot;, 
3,&quot;Detractor&quot;, 
4,&quot;Detractor&quot;, 
5,&quot;Detractor&quot;, 
6,&quot;Detractor&quot;, 
7,&quot;Passive&quot;, 
8,&quot;Passive&quot;, 
9,&quot;Promoter&quot;, 
10,&quot;Promoter&quot;, 
&quot;N/A&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Result</label>
    <type>Text</type>
</CustomField>