unpackaged/main/default/objects/T1_Survey_Response__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>T1_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>