unpackaged/main/default/objects/T1_Survey_Response__c/fields/Products_Services_Id__c.field-meta.xml
<CustomField>
    <fullName>Products_Services_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Products Services Id</label>
    <referenceTo>PCSM_Visit_Cyc__c</referenceTo>
    <relationshipLabel>T1 Survey Responses</relationshipLabel>
    <relationshipName>T1_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>