unpackaged/main/default/objects/T1_Survey_Response__c/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The date the response was recorded</description>
    <inlineHelpText>The date the response was recorded</inlineHelpText>
    <label>Response Date</label>
    <type>Date</type>
</CustomField>