unpackaged/main/default/objects/T1_Survey_Response__c/listViews/TechnologyOne_entered_responses.listView-meta.xml
<ListView>
    <fullName>TechnologyOne_entered_responses</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>TechnologyOne</value>
    </filters>
    <label>TechnologyOne entered responses</label>
</ListView>